--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-number-format": "^5.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scroll": "^1.8.9",
