--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/query-async-storage-persister": "^4.29.1",
     "@tanstack/query-sync-storage-persister": "^4.29.1",
     "@tanstack/react-query-persist-client": "^4.29.3",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "axios": "^1.3.3",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
