--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "material-react-table": "^1.7.4",
     "moment": "^2.29.4",
     "next": "^13.4.4",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -49,6 +50,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/jquery": "^3.5.16",
     "@types/node": "^18.15.3",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-scroll": "^1.8.7",
