--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-number-format": "^5.3.1",
