--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ VITE_ATTACHMENT_PATH=C://Attachments
 VAT=10
 DOC_SALES_QUOTATION=23
 
+# Server Url / Server IP
+VITE_URL=https://192.168.1.11:50000
+
+# Database 
+VITE_DATABASE=TLTELA_DEVELOPER
+VITE_USERNAME=manager
+VITE_PASSWORD=Admin@tela
