--- a/.env
+++ b/.env
@@ -7,5 +7,8 @@ VITE_URL=https://192.168.1.11:50000
 
 # Database 
 VITE_DATABASE=TLTELA_DEVELOPER
-VITE_USERNAME=manager
-VITE_PASSWORD=Admin@tela
+VITE_USERNAME=T007
+VITE_PASSWORD=1234
+
+# port
+VITE_PORT=8080
