--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
     "@mui/material": "^5.11.9",
     "@mui/x-data-grid": "^6.2.1",
     "@mui/x-date-pickers": "^5.0.19",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@tanstack/query-async-storage-persister": "^4.29.1",
     "@tanstack/query-sync-storage-persister": "^4.29.1",
     "@tanstack/react-query-persist-client": "^4.29.3",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "axios": "^1.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "eslint-config-next": "^13.4.4",
     "framer-motion": "^9.0.2",
     "lottie-react": "^2.3.1",
+    "lucide-react": "^0.323.0",
     "material-react-table": "^1.7.4",
     "moment": "^2.29.4",
     "next": "^13.4.4",
@@ -46,6 +53,8 @@
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.1",
     "shortid": "^2.2.16",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.0.7"
   },
   "devDependencies": {
