--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "eslint-config-next": "^13.4.4",
+    "exceljs": "^4.4.0",
     "framer-motion": "^9.0.2",
     "lottie-react": "^2.3.1",
     "lucide-react": "^0.323.0",
